fix(module:menu): fix menu overflow detection & replace ul with div close #3412 close #4227 close #3687

--- a/components/dropdown/style/patch.less
+++ b/components/dropdown/style/patch.less
@@ -1,6 +1,6 @@
 .ant-dropdown-menu {
   & > ul {
-    list-style: none;
+    list-style: inherit;
     margin: 0;
     padding: 0;
   }
